--- a/liquidwar6/doc/gui-gdoc.texi
+++ b/liquidwar6/doc/gui-gdoc.texi
@@ -36,6 +36,17 @@ but this @code{pop_press} function will return 1 for each press there's been.
 @strong{Return value:}  1 if there's a press event in the queue, 0 if empty.
 @end deftypefun
 
+@deftypefun {int} {lw6gui_button_pop_simple_click} (lw6gui_button_t * @var{button})
+@var{button}:  the button to query
+
+Tells how many times the button has been simpleclicked. This is different
+from a simple press, in fact, there's a delay, we must wait until the
+double-click delay is elapsed to make sure this is a simple click...
+Designed for use with mouse to differentiate fire and alternate fire.
+
+@strong{Return value:}  1 if there's a simpleclick event in the queue, 0 if empty.
+@end deftypefun
+
 @deftypefun {int} {lw6gui_button_pop_double_click} (lw6gui_button_t * @var{button})
 @var{button}:  the button to query
 
