--- a/liquidwar6/doc/ker-gdoc.texi
+++ b/liquidwar6/doc/ker-gdoc.texi
@@ -401,6 +401,16 @@ game rules, and of course what happened on the battlefield.
 @strong{Return value:}  1 if over, 0 if not.
 @end deftypefun
 
+@deftypefun {int} {lw6ker_game_state_did_cursor_win} (lw6ker_game_state_t * @var{game_state}, u_int16_t @var{cursor_id})
+@var{game_state}:  game_state to query
+
+@var{cursor_id}:  the cursor to test
+
+Tells wether a cursor was the winner after a game is over.
+
+@strong{Return value:}  1 if cursor is in winning team, 0 if not.
+@end deftypefun
+
 @deftypefun {int} {lw6ker_game_state_get_winner} (lw6ker_game_state_t * @var{game_state}, int @var{excluded_team})
 @var{game_state}:  the game_state to query
 
