--- a/liquidwar6/doc/ldr-gdoc.texi
+++ b/liquidwar6/doc/ldr-gdoc.texi
@@ -90,6 +90,16 @@ used in test programs.
 @strong{Return value:}  none.
 @end deftypefun
 
+@deftypefun {int} {lw6ldr_exp_validate} (lw6map_level_t * @var{level}, char * @var{user_dir})
+@var{level}:  the level to validate
+
+@var{user_dir}:  user directory
+
+Validates a level, acknowledges you've won it. Upgrades exp.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
 @deftypefun {int} {lw6ldr_grease_apply} (lw6map_layer_t * @var{layer}, lw6map_rules_t * @var{rules}, lw6ldr_hints_t * @var{hints}, lw6sys_progress_t * @var{progress})
 @var{layer}:  the layer on which to apply the grease
 
