--- a/liquidwar6/doc/pil-gdoc.texi
+++ b/liquidwar6/doc/pil-gdoc.texi
@@ -352,6 +352,16 @@ Tells wether the game is over or not.
 @strong{Return value:}  1 if over, 0 if not
 @end deftypefun
 
+@deftypefun {int} {lw6pil_pilot_did_cursor_win} (lw6pil_pilot_t * @var{pilot}, u_int16_t @var{cursor_id})
+@var{pilot}:  the object to query
+
+@var{cursor_id}:  the cursor_id concerned
+
+Tells wether a given cursor was winner or not.
+
+@strong{Return value:}  1 if over, 0 if not
+@end deftypefun
+
 @deftypefun {int} {lw6pil_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
